--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "fast-glob": "^3.3.2",
+    "minimatch": "^9.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.4",
     "vite-plugin-svgr": "^4.2.0"
   }
