--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0"
   },
