add http request(trash)

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_ECOMMERCE_API=pk_test_562649b0515be1104bb5576579e03bba21a69f4db1200
 VITE_ECOMMERCE_SEC=sk_test_562646986f9e46fc9494b7f4614066393ea8e8f4bc0f2
+VITE_BASEURL_API=https://68hg5bjpq7.us.aircode.run/
